--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "repository": "https://github.com/michaelknoch/ng2-cytoscape",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install && tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Knoch",
   "license": "ISC",
